# SPIRIT

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  config.h  packing.c  packing.h  params.h  poly.c  poly.h  rounding.c  sign.c  spirit.c  spirit.h
src/falcon/: CMakeLists.txt  falcon.c  falcon.h
src/kyber/ref/: Makefile  kem.c  kem.h  kex.c  params.h  test_kyber.c
src/pqFMD/: CMakeLists.txt  cbd.c  cbd.h  indcpa.c  indcpa.h  multi.c  multi.h  pack_unpack.c  pack_unpack.h  params.h  poly.c  poly.h
src/pqFMD/test/: test_pq_fmd.c
src/scalableFuzzy/: CMakeLists.txt  cbd.c  indcpa.c  indcpa.h  pack_unpack.c  pack_unpack.h  params.h  poly.c  poly.h  poly_mul.c  poly_mul.h  scalableFuzzy.c  scalableFuzzy.h
src/scalableFuzzy/test/: test_scalable_fuzzy.c
src/security_estimates_scripts/: Dilithium.py  Kyber.py  MLWE_security.py  dilithium_param_code.py
src/test/: .gitignore  test_spirit.c
